--- a/app/src/main/res/layout/activity_mine_lwj.xml
+++ b/app/src/main/res/layout/activity_mine_lwj.xml
@@ -45,12 +45,13 @@
             android:src="@drawable/ic_mine_lwj" />
 
         <TextView
+            android:id="@+id/tv_lwj"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/iv"
             android:layout_marginStart="@dimen/dp_10"
             android:layout_toEndOf="@id/iv"
-            android:text="100"
+            android:text="0"
             android:textColor="@color/color_ffffff"
             android:textSize="32sp" />
     </RelativeLayout>
