--- a/app/src/main/res/layout/activity_course_selection.xml
+++ b/app/src/main/res/layout/activity_course_selection.xml
@@ -81,7 +81,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dimen_30dp"
-                        android:text="课程模式"
+                        android:text="间歇训练"
                         android:textColor="@color/color_ffffff"
                         android:textSize="24sp"
                         android:textStyle="bold" />
