--- a/app/src/main/res/layout/item_history_equipment.xml
+++ b/app/src/main/res/layout/item_history_equipment.xml
@@ -1,85 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="@dimen/dp_10"
-    android:layout_marginTop="@dimen/dp_10"
-    android:background="@drawable/bj_circle_fff_10"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_wgz"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/dimen_25dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/dp_10"
-        android:background="@drawable/bj_shape_line_theme_2"
-        android:drawableStart="@drawable/icon_like"
-        android:drawablePadding="@dimen/dimen_5dp"
-        android:gravity="center"
-        android:paddingHorizontal="@dimen/dp_10"
-        android:text="加关注"
-        android:textColor="@color/color_text_theme"
-        android:textSize="10sp"
-        android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/tv_ygz"
-        android:layout_width="@dimen/dimen_60dp"
-        android:layout_height="@dimen/dimen_25dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/dp_10"
-        android:background="@drawable/bj_circle_theme_5"
-        android:gravity="center"
-        android:text="开始连接"
-        android:textColor="@color/color_ffffff"
-        android:textSize="10sp" />
+    <LinearLayout
+        android:id="@+id/rl1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_head_img"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:layout_margin="@dimen/dp_10"
-        android:src="@mipmap/ic_6" />
+        <RelativeLayout
+            android:id="@+id/rl_left"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:visibility="gone">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/iv_head_img"
+            <RadioButton
+                android:id="@+id/rbtn"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@drawable/bj_circle_fff_10"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_wgz"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/dp_10"
+                android:background="@drawable/bj_shape_line_theme_2"
+                android:drawableStart="@drawable/icon_like"
+                android:drawablePadding="@dimen/dimen_5dp"
+                android:gravity="center"
+                android:paddingHorizontal="@dimen/dp_10"
+                android:text="加关注"
+                android:textColor="@color/color_text_theme"
+                android:textSize="10sp"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tv_ygz"
+                android:layout_width="@dimen/dimen_60dp"
+                android:layout_height="@dimen/dimen_25dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/dp_10"
+                android:background="@drawable/bj_circle_theme_5"
+                android:gravity="center"
+                android:text="开始连接"
+                android:textColor="@color/color_ffffff"
+                android:textSize="10sp" />
+
+            <ImageView
+                android:id="@+id/iv_head_img"
+                android:layout_width="38dp"
+                android:layout_height="38dp"
+                android:layout_margin="@dimen/dp_10"
+                android:src="@mipmap/ic_6" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/iv_head_img"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="无"
+                    android:textColor="@color/color_333333"
+                    android:textSize="15sp" />
+
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_user_name"
+                    android:layout_marginTop="@dimen/dimen_5dp"
+                    android:text="2002-15-16"
+                    android:textColor="@color/color_999999"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_user_name_f"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_time"
+                    android:text="无"
+                    android:textColor="@color/color_333333"
+                    android:textSize="15sp"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+    <!-- 屏幕右侧外边部分，正常时在屏幕中处于不可见 -->
+    <LinearLayout
+        android:id="@+id/ll_hidden"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:background="#ff0000"
         android:gravity="center">
 
         <TextView
-            android:id="@+id/tv_user_name"
+            android:id="@+id/tv_item_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
-            android:textColor="@color/color_333333"
-            android:textSize="15sp" />
+            android:text="删除"
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
+    </LinearLayout>
 
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_user_name"
-            android:layout_marginTop="@dimen/dimen_5dp"
-            android:text="2002-15-16"
-            android:textColor="@color/color_999999"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_user_name_f"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_time"
-            android:text="无"
-            android:visibility="gone"
-            android:textColor="@color/color_333333"
-            android:textSize="15sp" />
-    </RelativeLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
