--- a/app/src/main/res/layout/jz_layout_std.xml
+++ b/app/src/main/res/layout/jz_layout_std.xml
@@ -263,12 +263,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:background="@drawable/bj_circle_fff_tm"
         android:padding="15dp">
 
         <ImageView
             android:id="@+id/iv_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@drawable/ic_baofang" />
     </LinearLayout>
 
