--- a/app/src/main/res/layout/item_home_three_sq.xml
+++ b/app/src/main/res/layout/item_home_three_sq.xml
@@ -19,7 +19,7 @@
             <ImageView
                 android:id="@+id/iv_icon_sp"
                 android:layout_width="match_parent"
-                android:layout_height="320dp"
+                android:layout_height="300dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_13" />
@@ -34,8 +34,8 @@
 
             <ImageView
                 android:id="@+id/iv_baofang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="@dimen/dimen_45dp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_baofang" />
         </RelativeLayout>
@@ -60,8 +60,8 @@
 
             <ImageView
                 android:id="@+id/iv_head_img"
-                android:layout_width="@dimen/dimen_20dp"
-                android:layout_height="@dimen/dimen_20dp"
+                android:layout_width="@dimen/dimen_25dp"
+                android:layout_height="@dimen/dimen_25dp"
                 android:layout_marginStart="@dimen/dimen_5dp"
                 android:src="@mipmap/ic_6" />
 
@@ -70,29 +70,44 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toStartOf="@id/tv_num"
                 android:layout_marginStart="@dimen/dimen_5dp"
+                android:layout_toStartOf="@id/ll_xh"
                 android:layout_toEndOf="@id/iv_head_img"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:layout_marginEnd="@dimen/dp_10"
                 android:padding="@dimen/dimen_2dp"
                 android:text="孙娜"
                 android:textColor="@color/color_999999"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/tv_num"
+
+            <LinearLayout
+                android:id="@+id/ll_xh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@id/tv_name"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/dimen_5dp"
-                android:drawableStart="@drawable/icon_xin_99"
-                android:drawablePadding="@dimen/dimen_5dp"
-                android:text="12345"
-                android:textColor="@color/color_999999"
-                android:textSize="11sp" />
+                android:gravity="center_vertical"
+                android:paddingEnd="@dimen/dp_10">
+
+                <ImageView
+                    android:id="@+id/iv_select_xh"
+                    android:layout_width="@dimen/dimen_15dp"
+                    android:layout_height="@dimen/dimen_15dp"
+                    android:src="@drawable/icon_xin_99_d" />
+
+                <TextView
+                    android:id="@+id/tv_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_5dp"
+                    android:text="0"
+                    android:textColor="@color/color_999999"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
