--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -25,8 +25,9 @@
 
     <ImageView
         android:id="@+id/iv_close"
-        android:layout_width="@dimen/dimen_30dp"
-        android:layout_height="@dimen/dimen_30dp"
+        android:layout_width="@dimen/dimen_25dp"
+        android:layout_margin="@dimen/dp_10"
+        android:layout_height="@dimen/dimen_25dp"
         android:layout_alignParentEnd="true"
         android:padding="@dimen/dp_10"
         android:scaleType="center"
