--- a/app/src/main/res/layout/item_association_list.xml
+++ b/app/src/main/res/layout/item_association_list.xml
@@ -414,7 +414,16 @@
                 android:layout_marginBottom="@dimen/dimen_20dp"
                 android:layout_marginTop="@dimen/dp_10">
 
-
+                <TextView
+                    android:id="@+id/tv_browse_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rv_img_list"
+                    android:layout_marginStart="@dimen/dimen_5dp"
+                    android:padding="@dimen/dp_10"
+                    android:text="浏览 0 次"
+                    android:textColor="@color/color_666666"
+                    android:textSize="14sp" />
                 <TextView
                     android:id="@+id/tv_fenxiang"
                     android:layout_width="wrap_content"
@@ -422,6 +431,7 @@
                     android:drawableStart="@drawable/icon_share_99_d"
                     android:drawablePadding="@dimen/dimen_5dp"
                     android:gravity="center_vertical"
+                    android:visibility="gone"
                     android:padding="@dimen/dp_10"
                     android:text="0"
                     android:textColor="@color/color_999999" />
