--- a/app/src/main/res/layout/item_history_equipment.xml
+++ b/app/src/main/res/layout/item_history_equipment.xml
@@ -84,28 +84,25 @@
                     android:layout_height="wrap_content"
                     android:text="无"
                     android:textColor="@color/color_333333"
-                    android:textSize="15sp" />
-
+                    android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/tv_user_name_f"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_user_name"
+                    android:text="无"
+                    android:textColor="@color/color_333333"
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_user_name"
+                    android:layout_below="@id/tv_user_name_f"
                     android:layout_marginTop="@dimen/dimen_5dp"
                     android:text="2002-15-16"
                     android:textColor="@color/color_999999"
                     android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_user_name_f"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_time"
-                    android:text="无"
-                    android:textColor="@color/color_333333"
-                    android:textSize="15sp"
-                    android:visibility="gone" />
             </RelativeLayout>
 
 
