--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -100,8 +100,8 @@
                         android:id="@+id/AAChartView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:scrollbars="none"
                         android:layout_below="@id/ll_top" />
-
                     <LinearLayout
                         android:id="@+id/ll_zh_top"
                         android:layout_width="wrap_content"
