--- a/app/src/main/res/layout/popup_window_yhq_yz.xml
+++ b/app/src/main/res/layout/popup_window_yhq_yz.xml
@@ -17,6 +17,7 @@
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginStart="@dimen/dp_10"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:paddingHorizontal="@dimen/dp_10"
