--- a/app/src/main/res/layout/item_img.xml
+++ b/app/src/main/res/layout/item_img.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/rl"
@@ -26,10 +26,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@id/iv_img"
-            android:visibility="gone"
             android:layout_margin="@dimen/dimen_5dp"
-            android:src="@drawable/ic_interest_select" />
+            android:src="@drawable/ic_interest_select"
+            android:visibility="gone" />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rl"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_centerHorizontal="true"
+        android:text=""
+        android:textColor="@color/color_000000"
+        android:textSize="16sp" />
 
 </RelativeLayout>
