--- a/app/src/main/res/layout/activity_mine_circle.xml
+++ b/app/src/main/res/layout/activity_mine_circle.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/dp_10"
-            android:drawableStart="@drawable/ic_share"
+            android:drawableStart="@drawable/ic_out_quanzi"
             android:drawablePadding="@dimen/dimen_5dp"
             android:padding="@dimen/dimen_15dp"
             android:text=""
