--- a/app/src/main/res/layout/item_mine_message.xml
+++ b/app/src/main/res/layout/item_mine_message.xml
@@ -27,12 +27,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv1"
         android:layout_marginTop="6dp"
+        android:maxLines="1"
         android:layout_toEndOf="@id/iv"
         android:text="签到提醒"
         android:textColor="@color/color_999999"
         android:textSize="12sp" />
 
     <TextView
+        android:id="@+id/tv_doc"
         android:layout_width="@dimen/dimen_20dp"
         android:layout_height="@dimen/dimen_20dp"
         android:layout_centerVertical="true"
