--- a/app/src/main/res/layout/activity_mine_jindou_cz.xml
+++ b/app/src/main/res/layout/activity_mine_jindou_cz.xml
@@ -85,6 +85,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:padding="@dimen/dimen_20dp">
 
                 <TextView
