--- a/app/src/main/res/layout/activity_mine_jindou.xml
+++ b/app/src/main/res/layout/activity_mine_jindou.xml
@@ -135,6 +135,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_logPay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/tv2"
@@ -163,12 +164,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_10"
                         android:src="@drawable/icon_jiantou_zuo_00" />
 
                     <TextView
+                        android:id="@+id/tv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -178,6 +181,7 @@
                         android:textSize="16sp" />
 
                     <ImageView
+                        android:id="@+id/iv_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_10"
@@ -193,8 +197,17 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/view1"
                     android:layout_marginTop="@dimen/dp_10"
+                    android:visibility="gone"
                     android:overScrollMode="never" />
 
+                <TextView
+                    android:id="@+id/tv_not"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimen_150dp"
+                    android:layout_below="@id/view1"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:gravity="center"
+                    android:text="暂无数据" />
 
             </RelativeLayout>
 
