--- a/app/src/main/res/layout/activity_mine_integral.xml
+++ b/app/src/main/res/layout/activity_mine_integral.xml
@@ -105,6 +105,7 @@
                     android:padding="@dimen/dimen_20dp">
 
                     <TextView
+                        android:id="@+id/tv_integralThatDayGrandAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
@@ -131,6 +132,7 @@
                     android:padding="@dimen/dimen_20dp">
 
                     <TextView
+                        android:id="@+id/tv_integralGrandAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
@@ -226,6 +228,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_logPay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@id/tv2"
@@ -233,7 +236,7 @@
                     android:layout_marginBottom="@dimen/dimen_2dp"
                     android:drawableEnd="@drawable/icon_jiantou_xia_theme"
                     android:drawablePadding="@dimen/dp_10"
-                    android:text="获得记录"
+                    android:text="支付记录"
                     android:textColor="@color/color_text_theme"
                     android:textSize="12sp" />
 
@@ -254,12 +257,14 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_10"
                         android:src="@drawable/icon_jiantou_zuo_00" />
 
                     <TextView
+                        android:id="@+id/tv_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -269,6 +274,7 @@
                         android:textSize="16sp" />
 
                     <ImageView
+                        android:id="@+id/iv_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="@dimen/dp_10"
