--- a/app/src/main/res/layout/activity_mine_lwj.xml
+++ b/app/src/main/res/layout/activity_mine_lwj.xml
@@ -93,6 +93,7 @@
             android:visibility="gone" />
 
         <TextView
+            android:id="@+id/tv_not"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_150dp"
             android:gravity="center"
