--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -275,6 +275,7 @@
                         android:src="@drawable/icon_login_wx" />
 
                     <ImageView
+                        android:id="@+id/iv_login_qq"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/dp_10"
